# vision-rt

./: .gitignore  README.md  _visionrt.pyi  build_module.sh  e2e_benchmark.py  pyproject.toml  setup.py  usage.py  vision_rt.pyi
csrc/: bindings.cpp  buffers.cuh  camera.hpp  graph.hpp  kernels.cu  ops.hpp  preprocessing.hpp  utils.hpp
examples/: profile.sh  profile_inference.py
visionrt/: __init__.py  __init__.pyi  _visionrt.pyi  compiler.py  config.py  optim.py  utils.py
